[gd_scene load_steps=2 format=3 uid="uid://bmnv6wmoj5ow0"]

[ext_resource type="Script" path="res://scripts/gui/start_menu.gd" id="1_fbg0r"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbg0r")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1900.0
offset_bottom = 1100.0

[node name="JoinName" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 589.0
offset_top = 388.0
offset_right = 734.0
offset_bottom = 425.0

[node name="OID" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 589.0
offset_top = 335.0
offset_right = 734.0
offset_bottom = 372.0
placeholder_text = "oid"

[node name="HostName" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 887.0
offset_top = 390.0
offset_right = 1032.0
offset_bottom = 423.0

[node name="JoinButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 588.0
offset_top = 440.0
offset_right = 731.0
offset_bottom = 470.0
text = "Join"

[node name="HostButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 890.0
offset_top = 443.0
offset_right = 1033.0
offset_bottom = 474.0
text = "Host
"

[node name="LoadGameButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 746.0
offset_top = 566.0
offset_right = 889.0
offset_bottom = 597.0
text = "Load Game"

[node name="MY_OID" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 894.0
offset_top = 332.0
offset_right = 1032.0
offset_bottom = 360.0
text = "loading oid..."

[connection signal="pressed" from="Panel/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Panel/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Panel/LoadGameButton" to="." method="_on_load_game_button_pressed"]
